<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_sim</name>
  <version>0.1.0</version>
  <description>Geometric AprilTag detection simulator. Publishes camera_optical_frame -> tag_name TFs driven by a ground-truth pose and map-frame tag positions, mimicking apriltag-detector without image processing.</description>
  <maintainer email="fuji-ipd@todo.todo">fuji-ipd</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>amr_ex_action</depend>
  <depend>sim_world_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
